# toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/toolkit/audio/: ADSREnvelope.h  AmplitudeModulation.h  Arpeggiator.cpp  Arpeggiator.h  AudioFormat.h  BaseOscillator.h  BroadcastSink.h  Buffer.h  Bus.cpp  Bus.h  Comb.h  CutoffFilter.h  Delay.h  ETTuning.h  FFT.h  FrequencyModulation.h  Harmonics.h  IFilter.h  IOscillator.h  ISink.h  ISource.h  ITuning.h  Key.h  MDCT.h  Mixer.h  Noise.h  Note.h  PCMSource.cpp  PCMSource.h  PolynomialOscillator.h  SawtoothOscillator.h  Scale.h  Sequencer.h  SineOscillator.h  SourceControlSink.h  SquareOscillator.h  TriangleOscillator.h  WaveFile.cpp  WaveFile.h
src/toolkit/cli/: OptionParser.cpp  OptionParser.h
src/toolkit/core/: Apply.h  Buffer.h  ByteArray.h  Counter.h  Enum.h  Exception.h  Hash.h  IntrusiveList.h  Invoke.h  Iterable.h  LRUCache.h  Macros.h  Math.h  MemberCheck.h  Noncopyable.h  Optional.h  Singleton.h  StringRef.cpp  StringRef.h  Task.h  TaskQueue.cpp  TaskQueue.h  ThreadPool.cpp  ThreadPool.h  Token.h  config.h.in  core.h  signals.h  type_traits.h  types.h
src/toolkit/fa/: NFA.h
src/toolkit/io/: BufferStream.h  BufferedStream.h  ByteArray.h  ByteData.h  ByteDataStream.h  CRC.h  Copy.h  DataStream.h  Directory.cpp  Directory.h  DirectoryReader.cpp  DirectoryReader.h  Event.cpp  Event.h  File.cpp  File.h  FunctionOutputStream.h  IBufferedStream.h  INotifyEventListener.h  IPeekableStream.h  IPollEventHandler.h  IPollable.h  ISerialPort.h  ISocketEventHandler.h  IStream.h  KeyValueFileStorage.cpp  KeyValueFileStorage.h  MemoryInputStream.h  MemoryMapping.cpp  MemoryMapping.h  MemoryOutputStream.h  MemoryStream.h  NonBlockingStream.cpp  NonBlockingStream.h  Notify.cpp  Notify.h  Pipe.h  Poll.cpp  Poll.h  Process.cpp  (+9 more)
src/toolkit/log/: ConsoleLoggingSink.cpp  ConsoleLoggingSink.h  FileLoggingSink.cpp  FileLoggingSink.h  ILoggingSink.h  Logger.cpp  Logger.h
src/toolkit/net/: BaseServerSocket.h  BaseSocket.cpp  BaseSocket.h  IServerSocket.h  ISocket.h
src/toolkit/net/bsd/: Socket.cpp  Socket.h
src/toolkit/net/ipv4/: Address.cpp  Address.h  Endpoint.cpp  Endpoint.h  TCPServerSocket.cpp  TCPServerSocket.h  TCPSocket.cpp  TCPSocket.h  UDPServerSocket.h  UDPSocket.h  UnixServerSocket.h  UnixSocket.h
src/toolkit/net/unix/: Endpoint.cpp  Endpoint.h  Enpoint.cpp  Enpoint.h  LocalServerSocket.h  LocalSocket.cpp  LocalSocket.h
src/toolkit/raster/: Blender.h  Color.h  PixelFormat.h  Point.h  Position.h  Rect.h  Size.h
src/toolkit/raster/gl/: Buffer.cpp  Buffer.h  CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.h  VertexArray.cpp  VertexArray.h
src/toolkit/raster/software/: BaseRenderer.h  LockedRect.h  Renderer.h  RendererWithContext.h  Surface.h
src/toolkit/serialization/: BSON.h  BSONTokenizer.h  BSONWriter.h  BinaryReader.h  BinaryReaderBase.h  BinaryWriter.h  Grammar.h  ISerializable.h  ISerializationStream.h  JSON.h  Record.h  Serialization.h  Serializator.h
src/toolkit/serialization/bson/: BinaryReader.h  BinaryReaderBase.h  BinaryWriter.h  InputStream.cpp  InputStream.h  Number.h  ObjectInputStream.cpp  ObjectInputStream.h  OutputStream.h  Tag.h  Tokenizer.h
src/toolkit/text/: Formatters.cpp  Formatters.h  FromString.h  Hash.h  String.cpp  String.h  StringOutputStream.cpp  StringOutputStream.h  ToString.h
tests/: CMakeLists.txt  nfa.h  serialization.h  server.cpp  test-runner.cpp
